examples/datalog/17_rule_commands/16_drop_then_readd.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_drop_readd
Knowledge graph 'test_drop_readd' created.
Switched to knowledge graph: test_drop_readd
> .kg use test_drop_readd
Switched to knowledge graph: test_drop_readd
> +data[(1, 10), (2, 20), (3, 30)].
Inserted 3 fact(s) into 'data'.
> +computed(Id, Val) :- data(Id, V), Val = V * 2.
Script error: Failed to register rule: Unsafe rule 'computed': Head variable(s) Val not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
